2008-06-01  Alexey Torkhov  <atorkhov@gmail.com>

	* Fixing library to compile under GCC 4.3.

2007-01-13  Al Riddoch  <alriddoch@zepler.org>

	* Release 0.6.5. Interface version 6.0.0.

2007-01-13  Al Riddoch  <alriddoch@zepler.org>

	* varconf.spec.in: Tweak the rpm spec a little.

2007-01-13  Al Riddoch  <alriddoch@zepler.org>

	* tests/conftest.cpp: Add assert include missing from the test that
	  uses assert.

2007-01-12  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Increment version number. Remove conflicts, as
	  we don't really have a conflict.

	* varconf-1.0.pc.in: Don't conflict with earlier versions of sigc++.

2006-10-12  Al Riddoch  <alriddoch@zepler.org>

	* varconf/Config.h, varconf/config.cpp, varconf/dynbase.cpp,
	  varconf/dynbase.h, varconf/dyncmp.cpp, varconf/dyncmp.h,
	  varconf/dyntypes.cpp, varconf/dyntypes.h, varconf/parse_error.cpp,
	  varconf/parse_error.h, varconf/variable.cpp, varconf/variable.h:
	  Update the copyright statements with current maintainer.

2006-08-31  Al Riddoch  <alriddoch@zepler.org>

	* varconf/variable.cpp: Simplify equality check.

2006-08-31  Al Riddoch  <alriddoch@zepler.org>

	* varconf/config.cpp: Avoid resetting an item if it is already set
	  to the value given.

2006-04-11  Simon Goodall  <simon@simongoodall.co.uk>

	* varconf/variable.cpp: Escape backslash characters.

2006-02-19  Al Riddoch  <alriddoch@zepler.org>

	* varconf/Config.h, varconf/variable.h, tests/conftest.cpp:
	  Update usage of sigc++ to the native 2.0 API rather than the
	  deprecated compatability API. Eleminate the manual disconnection
	  code for deleted objects, as this is now handled automatically by
	  sigc::trackable.

2006-01-16  Al Riddoch  <alriddoch@zepler.org>

	* Release 0.6.4. Interface version 6.0.0.

2006-01-04  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Remove support for obsolete sigc++-1.2.

	* varconf.spec.in: Add libsigc++20-devel to devel rpm.

2006-01-03  Al Riddoch  <alriddoch@zepler.org>
