@@ -1,7 +1,7 @@
 #ifndef VARCONF_H
 #define VARCONF_H
 
-#include <varconf/Config.h>
+#include <varconf/config.h>
 #include <varconf/parse_error.h>
 #include <varconf/variable.h>
 #include <varconf/dynvar.h>
