@@ -1,3 +1,11 @@
+2008-11-07  Al Riddoch  <alriddoch@zepler.org>
+
+	* varconf/config.h: Merge the old content of Config.h into the lower
+	  case file to get rid of the case clash on MacOS.
+
+	* varconf/config.cpp, varconf/dyntypes.cpp, varconf/varconf.h:
+	  Include config.h with the lower case filename.
+
 2008-06-01  Alexey Torkhov  <atorkhov@gmail.com>
 
 	* Fixing library to compile under GCC 4.3.
